# AdventOfCode

./: .gitignore  README.md  aoc.ps1  aoc.py  fetch_input.py  grid.py  grid_too_complex.py  intcode.py  missing.py  open.py  pyproject.toml  run_all.md  run_all.py  run_all.yaml  scratch_pad_template.ipynb  solution_template.py
2015/: script.py
2015/01/: scratch_pad.ipynb  solution.py
2015/1/: scratch_pad.ipynb  script.py  solution.py
2015/10/: scratch_pad.ipynb  script.py  solution.py
2015/11/: scratch_pad.ipynb  script.py  solution.py
2015/12/: example.txt  scratch_pad.ipynb  script.py  solution.py  test.py
2015/13/: scratch_pad.ipynb  script.py  solution.py
2015/14/: scratch_pad.ipynb  script.py  solution.py  test.py
2015/15/: scratch_pad.ipynb  script.py  solution.py  test.py
2015/16/: scratch_pad.ipynb  script.py  solution.py
2015/17/: scratch_pad.ipynb  script.py  solution.py
2015/18/: scratch_pad.ipynb  script.py  solution.py
2015/19/: 19_out.txt  scratch_pad.ipynb  script.py  solution.py  test.py
2015/2/: scratch_pad.ipynb  script.py  solution.py
2015/20/: part1.py  scratch_pad.ipynb  script.py  solution.py  test.py
2015/21/: output.txt  scratch_pad.ipynb  script.py  solution.py  stole.py
2015/22/: scratch_pad.ipynb  script.py  script2.py  solution.py  stole.py
2015/23/: scratch_pad.ipynb  script.py  solution.py
2015/24/: scratch_pad.ipynb  script.py  solution.py
2015/25/: scratch_pad.ipynb  script.py  solution.py
2015/3/: scratch_pad.ipynb  script.py  solution.py
2015/4/: script.py  (+2 more)
2019/: intcode.py
2023/: script.py
(+556 files in other folders)
