[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint",
    "ruff",
    "requests",
    "numpy",
    "ipykernel",
    "jupyterlab",
    "dotenv",
    "sympy",
    "colorama",
    "networkx",
    "rich",
    "pyyaml",
    "scipy>=1.16.3",
]
